k8s/typescript_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typescript-app-svc
spec:
  selector:
    app: typescript
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: LoadBalancer
